--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </head>
     <body>
       <h1>Weather</h1>
-        
+     <footer>Coded by <a href="https://github.com/Faithk33" target="blank">Lethabo Kekana</a>
+         and is hosted on <a href="https://github.com/Faithk33/weather-app-kit" target="blank">Github</a>
+         and <a href="" target="blank">Netlify</a></footer>
         <script src="src/index.js" async defer></script>
     </body>
 </html>
