--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Vanilla Weather App</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="src/index.css">
-    </head>
-    <body>
-      <h1>Weather</h1>
-     <footer>Coded by <a href="https://github.com/Faithk33" target="blank">Lethabo Kekana</a>
-         and is hosted on <a href="https://github.com/Faithk33/weather-app-kit" target="blank">Github</a>
-         and <a href="" target="blank">Netlify</a></footer>
-        <script src="src/index.js" async defer></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Vanilla Weather App</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="src/index.css" />
+  </head>
+  <body>
+    <p class="current-time" id="current-time">20:00</p>
+    <h3>Johannesburg</h3>
+    <br />
+    <div class="weather-today" id="weather-today"></div>
+    <div class="weather-traits" id="weather-traits"></div>
+    <hr />
+    <div class="weekly-forecast" id="weekly-forecast"></div>
+    <footer>
+      Coded by
+      <a href="https://github.com/Faithk33" target="blank">Lethabo Kekana</a>
+      and is hosted on
+      <a href="https://github.com/Faithk33/weather-app-kit" target="blank"
+        >Github</a
+      >
+      and
+      <a href="https://vanni-weatherapp.netlify.app/" target="blank">Netlify</a>
+    </footer>
+    <script src="src/index.js" async defer></script>
+  </body>
 </html>
