--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
   <head>
     <meta charset="utf-8" />
@@ -13,32 +9,39 @@
     <link rel="stylesheet" href="src/index.css" />
   </head>
   <body>
-    <form></form>
+    <form>
+      <input type="text" placeholder="Enter a city" id="search" />
+      <input type="submit" value="search" />
+    </form>
     <p class="current-time" id="current-time">20:00</p>
     <p class="current-day" id="current-day">Tuesday</p>
     <h3>Johannesburg</h3>
-    <br />
     <div class="weather-today" id="weather-today">
-        <p class="forecast-icon"></p><span>12</span>
+      <p class="forecast-icon"></p>
+      <span>12</span>
     </div>
     <div class="weather-traits" id="weather-traits">
-        <ul class="trait" id="trait">
-            <li class="trait-1">SSW
-                <div class="trait-info">20mph</div>
-            </li>
-            <li class="trait-2">Rain
-                <div class="trait-info">0%</div>
-            </li>
-            <li class="trait-3">Sunrise
-                <div class="trait-info">6am</div>
-            </li>
-            <li class="trait-4">Sunset
-                <div class="trait-info">9pm</div>
-            </li>
-        </ul>
+      <ul class="trait" id="trait">
+        <li class="trait-1">
+          SSW
+          <div class="trait-info">20mph</div>
+        </li>
+        <li class="trait-2">
+          Rain
+          <div class="trait-info">0%</div>
+        </li>
+        <li class="trait-3">
+          Sunrise
+          <div class="trait-info">6am</div>
+        </li>
+        <li class="trait-4">
+          Sunset
+          <div class="trait-info">9pm</div>
+        </li>
+      </ul>
     </div>
     <hr />
-    
+
     <footer>
       Coded by
       <a href="https://github.com/Faithk33" target="blank">Lethabo Kekana</a>
