--- a/index.html
+++ b/index.html
@@ -11,32 +11,26 @@
   <body>
     <form>
       <input type="text" placeholder="Enter a city" id="search" />
-      <input type="submit" value="search" />
+      <input type="submit" value="Search" />
     </form>
     <p class="current-time" id="current-time">20:00</p>
     <p class="current-day" id="current-day">Tuesday</p>
     <h3>Johannesburg</h3>
     <div class="weather-today" id="weather-today">
-      <p class="forecast-icon"></p>
+      <i class="fa-solid fa-cloud-sun"></i>
       <span>12</span>
     </div>
     <div class="weather-traits" id="weather-traits">
       <ul class="trait" id="trait">
         <li class="trait-1">
+          <i class="fa-solid fa-wind"></i>
           SSW
           <div class="trait-info">20mph</div>
         </li>
         <li class="trait-2">
+          <i class="fa-solid fa-cloud-rain"></i>
           Rain
           <div class="trait-info">0%</div>
-        </li>
-        <li class="trait-3">
-          Sunrise
-          <div class="trait-info">6am</div>
-        </li>
-        <li class="trait-4">
-          Sunset
-          <div class="trait-info">9pm</div>
         </li>
       </ul>
     </div>
