--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="src/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/solid.min.js"
-      integrity="sha512-+fI924YJzeYFv7M0R29zJvRThPinSUOAmo5rpR9v6G4eWIbva/prHdZGSPN440vuf781/sOd/Fr+5ey0pqdW9w=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
   </head>
@@ -20,28 +23,31 @@
         <input
           type="text"
           placeholder="Enter a city"
-          id="search"
+          id="search-input"
           class="search-input" />
-        <input type="submit" value="Search" class="search-button" />
+        <input
+          type="submit"
+          value="Search"
+          class="search-button"
+          id="search-button" />
       </form>
-      <p class="current-time" id="current-time">20:00</p>
-      <p class="current-day" id="current-day">Tuesday</p>
-      <h3>Johannesburg</h3>
+      <h3 class="current-city">Johannesburg</h3>
+      <p class="current-date" id="current-date">Monday, 20:00</p>
       <div class="weather-today" id="weather-today">
-        <i class="fa-solid fa-cloud-sun"></i>
-        <span class="current-temp">12</span>
+        <i class="fa-solid fa-cloud-sun" id="main-icon"></i>
+        <span id="current-temperature">12°C</span>
       </div>
       <div class="weather-traits" id="weather-traits">
         <ul class="trait" id="trait">
           <li class="trait-1">
-            <i class="fa-solid fa-wind"></i>
+            <i class="fa-solid fa-wind" id=icon-2></i>
             SSW
-            <div class="trait-info">20mph</div>
+            <span class="trait-info">20mph</span>
           </li>
           <li class="trait-2">
-            <i class="fa-solid fa-cloud-rain"></i>
+            <i class="fa-solid fa-cloud-rain" id="icon-2"></i>
             Rain
-            <div class="trait-info">0%</div>
+            <span class="trait-info">0%</span>
           </li>
         </ul>
       </div>
