--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="body">
-      <form>
+      <form id=search-form>
         <input
           type="text"
           placeholder="Enter a city"
@@ -40,7 +40,7 @@
       <div class="weather-traits" id="weather-traits">
         <ul class="trait" id="trait">
           <li class="trait-1">
-            <i class="fa-solid fa-wind" id=icon-2></i>
+            <i class="fa-solid fa-wind" id='icon-2'></i>
             SSW
             <span class="trait-info">20mph</span>
           </li>
