added weather data

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           class="search-button"
           id="search-button" />
       </form>
-      <h3 class="current-city" id="city">Johannesburg</h3>
+      <h3 class="current-city" id="city"></h3>
       <p class="current-date" id="current-date">Monday, 20:00</p>
       <div class="weather-today" id="weather-today">
         <i class="fa-solid fa-cloud-sun" id="main-icon"></i>
@@ -46,12 +46,12 @@
           <li class="trait-1">
             <i class="fa-solid fa-wind" id="icon-2"></i>
             SSW
-            <span class="trait-info">20mph</span>
+            <span id="wind-speed">20mph</span>
           </li>
           <li class="trait-2">
             <i class="fa-solid fa-cloud-rain" id="icon-2"></i>
-            Rain
-            <span class="trait-info">0%</span>
+            Humidity
+            <span id="humidity">0%</span>
           </li>
         </ul>
       </div>
